--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Quicko
+APP_NAME=Amanda
 APP_ENV=local
 APP_KEY=
 APP_URL=http://localhost
@@ -6,6 +6,6 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=quicko
+DB_DATABASE=amanda
 DB_USERNAME=root
 DB_PASSWORD=
