--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,12 @@
 <IfModule mod_rewrite.c>
 
    RewriteEngine On
+   
+   RewriteCond %{SERVER_PORT} 80
 
-   RewriteCond %{REQUEST_FILENAME}  -f [OR]
    RewriteCond %{REQUEST_FILENAME} !-f
+   RewriteCond %{REQUEST_FILENAME} !-d
+   
    RewriteRule ^(.*)$ index.php [L,QSA]
 
 </IfModule>
