--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 APP_NAME=Amanda
 APP_ENV=local
+APP_DEBUG=true
 APP_KEY=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=amanda
+DB_DATABASE=
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -14,3 +15,7 @@ MAIL_HOST=
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_PORT=587
+
+BULK_SMS_API=
+BULK_SMS_USERNAME=
+BULK_SMS_PASSWORD=
